tests/bad/duplicate_attr.glaz
@[copy; copy]
struct X {}

fn main() {
}
